--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 asgiref==3.7.2
+dj-database-url==2.1.0
 Django==5.0.3
 django-cors-headers==4.3.1
 django-unfold==0.21.1
 djangorestframework==3.15.1
 pillow==10.2.0
+psycopg2==2.9.9
+python-decouple==3.8
 sqlparse==0.4.4
+typing_extensions==4.11.0
 tzdata==2024.1
