--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ django-cors-headers==4.3.1
 django-unfold==0.21.1
 djangorestframework==3.15.1
 pillow==10.2.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 python-decouple==3.8
 sqlparse==0.4.4
 typing_extensions==4.11.0
