--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Django==5.0.3
 django-cors-headers==4.3.1
 django-unfold==0.21.1
 djangorestframework==3.15.1
+gunicorn==22.0.0
+packaging==24.0
 pillow==10.2.0
 psycopg2-binary==2.9.9
 python-decouple==3.8
